solved horizontal scrolling

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 //offcanvas styling
+
 $offcanvas-horizontal-width: 200px;
 
 .offcanvas {
@@ -76,9 +77,6 @@ $offcanvas-horizontal-width: 200px;
 }
 
 // favoritter styling
-.features-section {
-  background-color: #f8f9fa; /* light gray background */
-}
 
 .feature-card {
   border: 2px solid #455d58 !important;
